# autonomous-quant-crypto-system

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml
docs/ai/: AGENT_ROLES.md  AQCS_CONTEXT.md  HANDOFF_TEMPLATE.md  TASK_PROTOCOL.md  agent_registry.yaml
docs/architecture/: architecture.md  backtesting-standards.md  data-validation.md  event-schema.md  experiment-tracking.md  minimal-backtesting-engine.md  research-core.md  system-architecture-v1.md
docs/audits/: 2026-05-19-AUD-006-post-merge-health-audit-002.md  2026-05-19-AUD-007-phase-1b-readiness-audit-001.md  AUD-001-governance-enforcement-layer.md  AUD-002-experiment-tracking.md  AUD-003-backtesting-standards.md  AUD-004-minimal-research-core.md  AUD-005-minimal-backtesting-engine.md  README.md
docs/bitacora/: 0006-multi-agent-governance.md  2026-05-16-inicio.md  2026-05-17-HND-006-ci-tooling-cleanup.md  2026-05-17-HND-007-ohlcv-cli-runtime-fix.md  2026-05-17-HND-008-docker-env-fix.md  2026-05-17-HND-009-gitflow-commit-standards.md  2026-05-17-HND-010-e2e-pipeline.md  2026-05-17-HND-011-monitoring-001.md  2026-05-17-audit-enforcement-layer.md  2026-05-18-HND-012-historical-download.md  2026-05-18-HND-013-monitoring-reconcile-001.md  2026-05-18-HND-014-dataset-manifest-001.md  2026-05-18-HND-015-replay-certification-001.md  2026-05-18-HND-016-data-api-smoke-001.md  2026-05-18-HND-017-data-burn-in-001.md  2026-05-18-HND-018-dataset-registry-001.md  2026-05-18-HND-019-research-dag-governance-001.md  2026-05-18-HND-020-arch-docs-research-dag-001.md  bitacora.txt  (+18 more)
requirements/: base.txt  dev.txt
scripts/: download_ohlcv.sh  list_experiments.py  run_research_validation.py
src/: __init__.py
(+173 files in other folders)
