[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aqcs"
version = "0.1.0"
description = "Autonomous Quant Crypto System — Institutional-grade quantitative research lab for crypto spot markets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nicolas Herrera", email = "nicolas.herera1@gmail.com" }]

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "ccxt>=4.3",
    "pyarrow>=15.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "rich>=13.7",
    "structlog>=24.1",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
    "types-PyYAML>=6.0",
    "types-requests>=2.31",
]

[project.scripts]
aqcs-download = "src.data.ohlcv:main"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]
exclude = ["notebooks/", "experiments/"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["ANN"]
"scripts/**/*.py" = ["ANN"]

[tool.black]
target-version = ["py311"]
line-length = 100
exclude = '''
/(
    \.git
  | notebooks
  | experiments
)/
'''

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["notebooks/", "experiments/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
